[package]
name = "sasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sasm_lib"

[[bin]]
name = "sasm"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
smpl_core_common = { git = "https://github.com/SmplWorks/SmplCore-common.git", branch = "main" }
smpl_parser = { git = "https://github.com/SmplWorks/SmplParser.git", branch = "main" }
thiserror = "1.0.56"
